Tipe Data Boolean

--- a/tipe-data-number.html
+++ b/tipe-data-number.html
@@ -12,9 +12,9 @@
     document.writeln("</br>");
     document.writeln(0b110001)
     document.writeln("<br/>");
-    document.writeln(0xFF)
+    document.writeln(0xFF);
     document.writeln("<br/>");
-    document.writeln(0o10)
+    document.writeln(0o10);
 </script>
 </body>
 </html>
